@@ -177,6 +177,15 @@ div.horizontal-tabs {
     @extend %button-attached;
     margin: 0 0 10px 0;
   }
+  // Resource remote file.
+  .filefield-source-remotefile input {
+    &.form-control:first-child {
+      @include border-radius($border-radius-base);
+    }
+    &.form-text {
+      width: 100%;
+    }
+  }
   .input-group-btn {
     display: inline-block;
     vertical-align: top;
